fix: stabilize e2e live stack